--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "gitpacker",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "",
+  "preferGlobal": true,
   "main": "index.js",
   "bin": {
     "gitpacker": "./bin/gitpacker.js"
+  },
+  "engines": {
+    "node": ">= 0.6.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,5 +27,14 @@
   "bugs": {
     "url": "https://github.com/WindomZ/gitpacker.js/issues"
   },
-  "homepage": "https://github.com/WindomZ/gitpacker.js#readme"
+  "homepage": "https://github.com/WindomZ/gitpacker.js#readme",
+  "dependencies": {
+    "commander": "^2.9.0"
+  },
+  "devDependencies": {
+    "ava": "^0.19.1",
+    "coveralls": "^2.13.0",
+    "nyc": "^10.2.0",
+    "standard": "*"
+  }
 }
