--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">= 0.6.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && nyc --reporter=lcov --reporter=text-lcov ava"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "packer",
     "package"
   ],
-  "author": "WindomZ",
+  "author": "WindomZ <git.windomz@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/WindomZ/gitpacker.js/issues"
