--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node": ">= 0.6.x"
   },
   "scripts": {
-    "test": "standard && nyc --reporter=lcov --reporter=text-lcov ava"
+    "test": "standard && nyc --reporter=lcov --reporter=text-lcov ava",
+    "testing": "standard && ava"
   },
   "repository": {
     "type": "git",
