--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitpacker",
-  "version": "1.1.0",
-  "description": "",
+  "version": "1.2.0",
+  "description": "A tool to quickly pack and compress git repository.",
   "preferGlobal": true,
   "main": "index.js",
   "bin": {
