--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,5 @@
+# http://EditorConfig.org
+
 root = true
 
 [*]
@@ -7,6 +9,13 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.yml]
-indent_style = space
+[*.{json,yml}]
 indent_size = 2
+insert_final_newline = false
+
+[*.sh]
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
+insert_final_newline = false
