--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/WindomZ/gitpacker.js#readme",
   "dependencies": {
-    "commander": "^2.9.0",
+    "commander": "^2.12.2",
     "shelljs": "^0.7.8"
   },
   "devDependencies": {
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
-    "nyc": "^11.0.0",
-    "standard": "*"
+    "nyc": "^11.3.0",
+    "standard": "^10.0.3"
   }
 }
